src/App.css
@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');

:root {
  --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  --black-text-light: rgba(0, 0, 0, 0.6);
  --white-text: rgba(255, 255, 255, 0.87);
  --white-text-light: rgba(255, 255, 255, 0.6);
  --primary: #00c756;
}

* {
  box-sizing: border-box;
}

body {
  background-color: #f7f7f7;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-height: 100vh;
  margin: 0;
  font-family: 'Lato', sans-serif;
}

.container {
  margin: 30px auto;
  width: 400px;
}

h1 {
  letter-spacing: 1px;
  margin: 0;
}

h3 {
  border-bottom: 1px solid #bbb;
  padding-bottom: 10px;
  margin: 40px 0 10px;
}

h4 {
  margin: 0;
  text-transform: uppercase;
}
.balance {
  color: var(--black-text-light);
}
.inc-exp-container {
  background-color: #fff;
  box-shadow: var(--box-shadow);
  padding: 20px;
  display: flex;
  justify-content: space-between;
  margin: 20px 0;
}

.inc-exp-container > div {
  flex: 1;
  text-align: center;
}

.inc-exp-container > div:first-of-type {
  border-right: 1px solid #dedede;
}

.money {
  font-size: 20px;
  letter-spacing: 1px;
  margin: 5px 0;
}

.money.plus {
  color: #2ecc71;
}

.money.minus {
  color: #c0392b;
}

label {
  display: inline-block;
  margin: 10px 0;
}

input[type='text'],
input[type='number'] {
  border: 1px solid #dedede;
  border-radius: 2px;
  display: block;
  font-size: 16px;
  padding: 10px;
  width: 100%;
}

.btn {
  cursor: pointer;
  background: var(--primary);
  background-image: linear-gradient(to right, var(--primary), #009e45);
  box-shadow: var(--box-shadow);
  color: var(--white-text);
  border: 0;
  display: block;
  font-size: 1em;
  font-weight: 600;
  letter-spacing: 1px;
  text-transform: uppercase;
  margin: 10px 0 30px;
  padding: 1em 10px;
  width: 100%;
}

.btn:focus,
.delete-btn:focus {
  outline: 0;
}

.list {
  list-style-type: none;
  padding: 0;
  margin-bottom: 40px;
}

.list li {
  background-color: #fff;
  box-shadow: var(--box-shadow);
  color: #333;
  display: flex;
  justify-content: space-between;
  position: relative;
  padding: 10px;
  margin: 10px 0;
}

.list li.plus {
  border-right: 5px solid #2ecc71;
}

.list li.minus {
  border-right: 5px solid #c0392b;
}

.delete-btn {
  cursor: pointer;
  background-color: #e74c3c;
  border: 0;
  color: #fff;
  font-size: 20px;
  line-height: 20px;
  padding: 2px 5px;
  position: absolute;
  top: 50%;
  left: 0;
  transform: translate(-100%, -50%);
  opacity: 0;
  transition: opacity 0.3s ease;
}

.list li:hover .delete-btn {
  opacity: 1;
}

.login {
  width: 80vw;
  max-width: 600px;
  height: 100%;
  display: flex;
  flex-flow: column;
  justify-content: center;
  border-radius: 13px;
  box-shadow: var(--box-shadow);
  padding: 10rem 4rem;
}
.login__heading {
  text-align: center;
  font-weight: 600;
  color: var(--black-text-light);
  margin-bottom: 1rem;
}
.login__button {
  cursor: pointer;
  background-color: #00c756;
  box-shadow: var(--box-shadow-light);
  color: rgba(255, 255, 255, 0.87);
  border: 0;
  border-radius: 0.3rem;
  display: block;
  letter-spacing: 2px;
  font-size: 2em;
  font-weight: 600;
  text-transform: uppercase;
  margin: 10px 0 30px;
  padding: 1rem 2rem;
  width: auto;
}
.login__button > svg {
  height: 1em;
  fill: var(--black-text-light);
}
.login__github {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.5rem;
  color: var(--black-text-light);
}
.login__github-button {
  cursor: pointer;
  margin: 0;
  padding: 0;
  border: 0;
  display: block;
  background: none;
}

.login__github-button > svg {
  height: 1.5rem;
  fill: var(--black-text-light);
}

.login__github-button:focus {
  outline: 0;
}

